Added CookieHelper to start working on the profile picture
Worked the whole day on this

--- a/BetterSom/BetterSom.csproj
+++ b/BetterSom/BetterSom.csproj
@@ -95,6 +95,7 @@
     <Compile Include="App.xaml.cs">
       <DependentUpon>App.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Utils\CookieHelper.cs" />
     <Compile Include="MainPage.xaml.cs">
       <DependentUpon>MainPage.xaml</DependentUpon>
     </Compile>
@@ -147,9 +148,7 @@
       <HintPath>..\..\..\..\..\Desktop\YourSom\bin\x86\Debug\PCLCrypto.dll</HintPath>
     </Reference>
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Pages\" />
-  </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
     <WCFMetadata Include="Service References\" />
   </ItemGroup>
